# rustflow

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  install.sh  rustflow.md
apps/playground/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/playground/src/: App.tsx
apps/playground/src/components/: ExecutionPanel.tsx  Sidebar.tsx  StepCard.tsx  WorkflowEditor.tsx
apps/playground/src/hooks/: useAgents.ts  useRunManager.ts  useWebSocket.ts
apps/playground/src/lib/: client.ts
apps/playground/src/types/: index.ts
benches/: Cargo.toml  core.rs  dag.rs  scheduler.rs
benches/tests/: concurrency.rs  memory.rs
crates/rustflow-cli/: Cargo.toml
crates/rustflow-cli/src/: main.rs
crates/rustflow-cli/src/commands/: dev.rs  doctor.rs  init.rs  mod.rs  playground.rs  progress.rs  run.rs  serve.rs
crates/rustflow-core/: Cargo.toml
crates/rustflow-core/src/: agent.rs  circuit_breaker.rs  context.rs  error.rs  lib.rs  retry.rs  step.rs  types.rs  workflow.rs
crates/rustflow-core/tests/: test_agent.rs  test_context.rs  test_error.rs  test_retry.rs  test_step.rs  test_types.rs
crates/rustflow-llm/: Cargo.toml
crates/rustflow-llm/src/: error.rs  gateway.rs  lib.rs  provider.rs  types.rs
crates/rustflow-llm/src/providers/: anthropic.rs  codex.rs  glm.rs  mod.rs  ollama.rs  openai.rs
crates/rustflow-llm/tests/: test_gateway.rs  test_providers.rs  test_types.rs
crates/rustflow-orchestrator/: Cargo.toml
crates/rustflow-orchestrator/benches/: dag.rs
crates/rustflow-orchestrator/src/: dag.rs  error.rs  executor.rs  flow_renderer.rs  lib.rs  scheduler.rs
crates/rustflow-orchestrator/tests/: concurrency.rs  test_dag.rs  test_scheduler.rs
crates/rustflow-plugins/: Cargo.toml
crates/rustflow-plugins/src/: abi.rs  error.rs  instance.rs  lib.rs  loader.rs  manifest.rs  plugin_tool.rs
crates/rustflow-server/: Cargo.toml
crates/rustflow-server/src/: error.rs  handlers.rs  lib.rs  playground.rs  router.rs  state.rs  ws.rs
crates/rustflow-tools/: Cargo.toml
crates/rustflow-tools/src/: env.rs  error.rs  file_read.rs  file_write.rs  http.rs  json_extract.rs  lib.rs  registry.rs  security.rs  shell.rs  sleep.rs  tool.rs
crates/rustflow-tools/tests/: test_http.rs  test_registry.rs
docs/: security.md
examples/: all-tools-workflow.yaml  codex-six-step-workflow.yaml  codex-workflow.yaml  complex-ollama-workflow.yaml  hello-agent.yaml  http-only.yaml
sdks/typescript/: README.md  index.js  jest.config.cjs  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
sdks/typescript/src/: client.test.ts  client.ts  index.ts  types.ts
