[package]
name = "rustflow-cli"
description = "Command-line interface for RustFlow"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rustflow"
path = "src/main.rs"

[dependencies]
rustflow-core = { workspace = true }
rustflow-orchestrator = { workspace = true }
rustflow-llm = { workspace = true }
rustflow-tools = { workspace = true }
rustflow-server = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { workspace = true }
anyhow = "1"
