[package]
name = "rustflow-llm"
description = "LLM gateway and provider abstractions for RustFlow"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rustflow-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
