[package]
name = "rustflow-orchestrator"
description = "DAG-based step orchestrator and scheduler for RustFlow"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rustflow-core = { workspace = true }
rustflow-llm = { workspace = true }
rustflow-tools = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

