[package]
name = "rustflow-plugins"
description = "WASM plugin loader for RustFlow"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rustflow-core = { workspace = true }
rustflow-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
wat = "1"
tokio = { workspace = true }
